refact:[step3] testcode 변수 초기화 수정