@@ -5,6 +5,7 @@ import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThatIllegalArgumentException;
@@ -15,8 +16,8 @@ class LottoTest {
     @DisplayName("로또에 숫자가 몇 개 포함되었는지 카운트한다.")
     @Test
     void compareCount() {
-        List<Integer> numbers = new ArrayList<>(List.of(1, 2, 3, 4, 5, 6));
-        List<Integer> other = new ArrayList<>(List.of(1, 2, 3, 10, 11, 12));
+        List<Integer> numbers = Arrays.asList(1, 2, 3, 4, 5, 6);
+        List<Integer> other = Arrays.asList(1, 2, 3, 10, 11, 12);
         Lotto lotto = new Lotto(numbers);
         Assertions.assertThat(lotto.findWinningType(other, 0)).isEqualTo(WinningType.HIT_COUNT_3);
     }
