@@ -5,6 +5,7 @@ import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 
@@ -12,11 +13,11 @@ public class LottosTest {
     @DisplayName("우승 로또와 몇 개가 일치하는지 통계를 낸다.")
     @Test
     void winningStatistic() {
-        List<Integer> winNumber = new ArrayList<>(List.of(1, 2, 3, 4, 5, 6));
+        List<Integer> winNumber = Arrays.asList(1, 2, 3, 4, 5, 6);
         Integer bonusNumber = 0;
 
-        List<Integer> buyNumber1 = new ArrayList<>(List.of(1, 2, 3, 5, 6, 7));
-        List<Integer> buyNumber2 = new ArrayList<>(List.of(1, 2, 3, 10, 11, 12));
+        List<Integer> buyNumber1 = Arrays.asList(1, 2, 3, 5, 6, 7);
+        List<Integer> buyNumber2 = Arrays.asList(1, 2, 3, 10, 11, 12);
 
         Lotto lotto1 = new Lotto(buyNumber1);
         Lotto lotto2 = new Lotto(buyNumber2);
